--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-vue": "^8.0.3",
+    "typescript": "^5.0.4"
   },
   "eslintConfig": {
     "root": true,
